changes from pr

--- a/src/app/applications/applications-list/application-filter/application-filter.component.html
+++ b/src/app/applications/applications-list/application-filter/application-filter.component.html
@@ -1,30 +1,33 @@
 <div class="filter-container">
   <div class="filter-selector-container">
-    <div class="filter-title">Status</div>
+    <div class="filter-title">{{ "APPLICATION-FILTER.STATUS" | translate }}</div>
     <mat-form-field appearance="outline">
-      <mat-select class="withoutArrow" [(value)]="state" placeholder="test" (selectionChange)="onStatus($event)">
+      <mat-select class="withoutArrow" [(value)]="state" placeholder="test" (selectionChange)="onStatusCheck($event)">
         <mat-option *ngFor="let option of statusOptions" [value]="option.value">
-          {{ option.label }}
+          {{ option.label | translate }}
         </mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 
   <div class="filter-selector-container">
-    <div class="filter-title">Tilstand</div>
+    <div class="filter-title">{{ "APPLICATION-FILTER.STATE" | translate }}</div>
     <mat-form-field appearance="outline">
-      <mat-select class="withoutArrow" [(value)]="status" (selectionChange)="onStatusCheck($event)">
+      <mat-select class="withoutArrow" [(value)]="status" (selectionChange)="onStatus($event)">
         <mat-option *ngFor="let option of stateOptions" [value]="option.value">
-          {{ option.label }}
+          {{ option.label | translate }}
         </mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 
   <div class="filter-selector-container">
-    <div class="filter-title">Ejer</div>
+    <div class="filter-title">{{ "APPLICATION-FILTER.OWNER" | translate }}</div>
     <mat-form-field appearance="outline">
       <mat-select class="withoutArrow" [(value)]="owner" (selectionChange)="onOwner($event)">
+        <mat-option [value]="owner">
+          {{ "APPLICATION-FILTER.ALL" | translate }}
+        </mat-option>
         <mat-option *ngFor="let option of ownerOptions" [value]="option.value">
           {{ option.label }}
         </mat-option>
@@ -36,7 +39,7 @@
   <button class="filter-button" mat-flat-button (click)="onButtonClick()">
     <div class="filter-icon-container">
       <img class="filter-icon" ngSrc="../../../../assets/images/filter.png" width="25" height="25" priority />
-      Reset filtre
+      {{ "APPLICATION-FILTER.RESET-FILTER" | translate }}
     </div>
   </button>
 </div>
