--- a/src/app/applications/applications-list/application-filter/application-filter.component.scss
+++ b/src/app/applications/applications-list/application-filter/application-filter.component.scss
@@ -9,7 +9,7 @@
 }
 
 .filter-selector-container {
-  width: 200;
+  width: 200px;
   margin-right: 30px;
   display: flex;
   flex-direction: column;
