--- a/src/app/shared/components/top-bar/top-bar.component.scss
+++ b/src/app/shared/components/top-bar/top-bar.component.scss
@@ -14,7 +14,6 @@
   justify-content: space-between;
   margin: 30px;
   margin-top: 40px;
-  overflow: none;
   margin-bottom: 40px;
 }
 
@@ -96,7 +95,7 @@
   flex-direction: row;
   justify-content: end;
   align-items: center;
-  font-size: 14;
+  font-size: 14px;
   font-weight: 500;
   line-height: 20px;
 }
@@ -106,7 +105,7 @@
   flex-direction: row;
   justify-content: end;
   align-items: center;
-  font-size: 12;
+  font-size: 12px;
   font-weight: 500;
   line-height: 16px;
   color: #525252;
