--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -387,6 +387,8 @@ $red: #dc3545;
 
 $alert-color: #991b1b;
 $stable-color: #047857;
+$warning-color: #fde047;
+
 $default-color: #525252;
 $default-icon-color: #404040;
 
