--- a/src/app/applications/applications-list/application-filter/application-filter.component.html
+++ b/src/app/applications/applications-list/application-filter/application-filter.component.html
@@ -38,8 +38,10 @@
   <div class="spacer"></div>
   <button class="filter-button" mat-flat-button (click)="onButtonClick()">
     <div class="filter-icon-container">
-      <img class="filter-icon" ngSrc="../../../../assets/images/filter.png" width="25" height="25" priority />
-      {{ "APPLICATION-FILTER.RESET-FILTER" | translate }}
+      <img ngSrc="../../../../assets/images/sliders.svg" width="18" height="16" priority />
+      <div class="filter-label">
+        {{ "APPLICATION-FILTER.RESET-FILTER" | translate }}
+      </div>
     </div>
   </button>
 </div>
