--- a/src/app/applications/applications-list/applications-table/applications-table.component.scss
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.scss
@@ -1,7 +1,3 @@
-.flag-icon {
-  color: red;
-}
-
 .name-and-description {
   max-width: 300px;
 }
@@ -29,6 +25,7 @@
   gap: 5px;
   align-items: center;
   flex-wrap: wrap;
+  margin-top: 5px;
 }
 
 .status-container {
@@ -52,5 +49,9 @@
 }
 
 .paginator {
+  display: none !important;
+}
+
+.mat-sort-header-arrow {
   display: none !important;
 }
